# ampermeter-recognition

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
config/: config.yml
notebooks/: ampermeter_recognition.ipynb  lib.py  markup_detection.ipynb  video_recognition.ipynb
scripts/: process_video.py
