[tool.poetry]
name = "ampermeter-recognition"
version = "0.1.0"
description = ""
authors = ["DepartmentNotebookUser <dep-nb-user@mail.ru>"]

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
opencv-python = "^4.5.3"
PyYAML = "^5.4.1"
scipy = "^1.7.1"
benderopt = "^1.3.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.2.0"
notebook = "^6.4.3"
matplotlib = "^3.4.3"
nbconvert = "^6.1.0"
black = "^21.7b0"
ipywidgets = "^7.6.3"
nbstripout = "^0.5.0"
pre-commit = "^2.15.0"
nbdime = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
